# databricks-api-wrapper

./: .gitignore  README.md  pyproject.toml
databricks_api_wrapper/: main.py
databricks_api_wrapper/api/: base.py  cluster_policies.py  clusters.py  dbfs.py  delta_live_tables.py  git.py  global_init_scripts.py  groups.py  instance_pools.py  ip_access_list.py  jobs.py  libraries.py  mlflow.py  permissions.py  repos.py  secrets.py  sql_endpoints.py  token.py  token_management.py  utils.py  workspace.py
databricks_api_wrapper/models/: git_cred_model.py  global_init_model.py  ip_access_model.py  jobs_model.py  permissions_model.py  queries_model.py  repos_model.py  token_management_model.py
databricks_api_wrapper/models/open_api/: gitcredentials-2.0-azure.yaml  global-init-scripts-2.0-azure.json  history-2.0-azure.yaml  ip-access-list-azure.yaml  jobs-2.1-azure.yaml  mlflow-2.0-azure.yaml  permissions-2.0-azure.yaml  queries-dashboards-2.0-azure.yaml  repos-2.0-azure.yaml  token-management-2.0-azure.json
databricks_api_wrapper/routes/: clusters.py
frontend/: package-lock.json  package.json  rollup.config.js  tailwind.config.js
frontend/src/: App.svelte
tests/: test_databricks_api_wrapper.py
